app/assets/stylesheets/users.scss
// Place all the styles related to the Users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: https://sass-lang.com/
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Material+Icons');
$text-color: #FFFFFF;

// Styles for main container page 
.main-screen {
    background: asset-url("Registration_form.png");
    background-size: cover;
    height: Max(1080px, 100vh);

//======== FORMS ========
  .signin-form, .signup-form {
    background-color: #464E4F;
    margin-top: 20vh;
    border-radius: 20px;
    padding-top: 48px;

    button { width: 80%; }
  }

  .signin-form { width: 26.66667%; }
  .signup-form { width: 60%; }

// Stylew for partials links

}

